--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "url": "https://github.com/togajs/toga-css.git"
   },
   "scripts": {
-    "coveralls": "gulp test && cat ./coverage/lcov.info | coveralls",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test": "gulp test"
   },
   "dependencies": {
     "mtil": "^0.1.3",
-    "tunic": "^0.2.2"
+    "tunic": "^0.3.0"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
@@ -38,7 +38,7 @@
     "gulp-jshint": "^1.9.0",
     "gulp-mocha": "^2.0.0",
     "jshint-stylish": "^1.0.0",
-    "toga": "^0.3.0"
+    "toga": "^0.3.2"
   },
   "engines": {
     "node": ">= 0.10"
