--- a/package.json
+++ b/package.json
@@ -29,18 +29,22 @@
     "tunic": "^0.3.0"
   },
   "devDependencies": {
+    "babel": "^5.1.13",
     "coveralls": "^2.11.2",
-    "event-stream": "^3.1.7",
-    "expect.js": "^0.3.1",
-    "gulp": "^3.8.10",
-    "gulp-istanbul": "^0.5.0",
-    "gulp-jscs": "^1.3.1",
-    "gulp-jshint": "^1.9.0",
-    "gulp-mocha": "^2.0.0",
-    "jshint-stylish": "^1.0.0",
-    "toga": "^0.3.2"
+    "eslint": "^0.20.0",
+    "expect": "^1.6.0",
+    "isparta": "^3.0.3",
+    "mocha": "^2.2.4",
+    "nodemon": "^1.3.7",
+    "stream-array": "^1.1.0",
+    "vinyl-fs": "^1.0.0"
   },
-  "engines": {
-    "node": ">= 0.10"
+  "scripts": {
+    "build": "babel index.js --out-file dist/index.js",
+    "cover": "babel-node ./node_modules/.bin/isparta cover --include index.js --reporter text --reporter lcov ./node_modules/.bin/_mocha -- test/*.js",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "lint": "eslint index.js test/*.js",
+    "test": "npm run lint && npm run cover",
+    "watch": "nodemon --exec 'npm run test' --watch index.js --watch test"
   }
 }
