--- a/package.json
+++ b/package.json
@@ -9,42 +9,42 @@
     "hologram",
     "kalei",
     "kss",
-    "styledocco"
+    "styledocco",
+    "styleguide",
+    "stylesheet"
   ],
   "homepage": "https://github.com/togajs/toga-css",
   "bugs": "https://github.com/togajs/toga-css/issues",
   "license": "MIT",
   "author": "Shannon Moeller <me@shannonmoeller.com> (http://shannonmoeller.com)",
-  "main": "index.js",
+  "main": "dist/toga-css.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/togajs/toga-css.git"
   },
-  "scripts": {
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "gulp test"
-  },
   "dependencies": {
     "mtil": "^0.1.3",
-    "tunic": "^0.3.0"
+    "tunic": "^0.4.0"
   },
   "devDependencies": {
-    "babel": "^5.1.13",
+    "babel": "^5.6.14",
+    "babel-eslint": "^3.1.20",
+    "babel-istanbul": "^0.2.9",
     "coveralls": "^2.11.2",
-    "eslint": "^0.20.0",
+    "eslint": "^0.24.0",
     "expect": "^1.6.0",
-    "isparta": "^3.0.3",
-    "mocha": "^2.2.4",
+    "mocha": "^2.2.5",
     "nodemon": "^1.3.7",
     "stream-array": "^1.1.0",
+    "toga": "^0.5.1",
     "vinyl-fs": "^1.0.0"
   },
   "scripts": {
-    "build": "babel index.js --out-file dist/index.js",
-    "cover": "babel-node ./node_modules/.bin/isparta cover --include index.js --reporter text --reporter lcov ./node_modules/.bin/_mocha -- test/*.js",
+    "all": "npm run lint && npm run test && npm run build",
+    "build": "babel src --out-dir dist",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "lint": "eslint index.js test/*.js",
-    "test": "npm run lint && npm run cover",
-    "watch": "nodemon --exec 'npm run test' --watch index.js --watch test"
+    "lint": "eslint src/*.js test/*.js",
+    "test": "babel-istanbul cover -i src/$npm_package_name.js ./node_modules/.bin/_mocha -- test/*.js",
+    "watch": "nodemon --exec 'npm run test' --watch src --watch test"
   }
 }
