--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "tunic": "^0.4.0"
   },
   "devDependencies": {
-    "babel": "^5.6.14",
-    "babel-eslint": "^3.1.20",
-    "babel-istanbul": "^0.2.9",
-    "coveralls": "^2.11.2",
-    "eslint": "^0.24.0",
-    "expect": "^1.6.0",
+    "babel": "^5.6.23",
+    "babel-eslint": "^3.1.23",
+    "babel-istanbul": "^0.2.10",
+    "coveralls": "^2.11.3",
+    "eslint": "^1.0.0-rc-1",
+    "expect": "^1.8.0",
     "mocha": "^2.2.5",
     "nodemon": "^1.3.7",
     "stream-array": "^1.1.0",
